# dsl

./: CHANGELOG.md  README.md  default.nix  dsl.cabal  release.nix
src/DSL/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Version1.hs  Version2.hs  Version3.hs  Version4.hs  Version5.hs  Version6.hs
