cabal-version:       2.4

name:                dsl
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ziyang Liu <free@cofree.io>
maintainer:          Ziyang Liu <free@cofree.io>
copyright:           2020 Ziyang Liu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
      DSL.Version1
      DSL.Version2
      DSL.Version3
      DSL.Version4
      DSL.Version5
      DSL.Version6
      DSL.Exercise1
      DSL.Exercise2
      DSL.Exercise3
      DSL.Exercise4
      DSL.Exercise5
  other-modules:
      Paths_dsl
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , containers >=0.5.10.2 && <0.7
    , indexed >= 0.1.3 && <0.2
    , indexed-extras >= 0.2 && <0.3
    , lens >= 4.10 && <5
    , transformers >= 0.5.6.2 && <0.6

  default-language: Haskell2010
